--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Welcome to chabrija.com
-description: Feel free to bookmark this to keep an eye on my project updates!
+title: Parking Lot
+description: Everything I wanted to bring up in the morning stand-up but couldn't
