--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@0.2.0
+plugins:
+  - jekyll-remote-theme
 title: Parking Lot
 description: Everything I wanted to bring up in the morning stand-up but couldn't
